Upgrade Saxon HE version and other dependencies